--- a/css/style.scss
+++ b/css/style.scss
@@ -218,7 +218,7 @@ $sec-color: #d9d9d9;
 					color: #fff;
 					font-weight: 500;
 				}
-
+				&.on,
 				&:hover {
 					background-color: #017a8a;
 				}
